--- a/selfdrive/ui/SConscript
+++ b/selfdrive/ui/SConscript
@@ -67,8 +67,7 @@ qt_env.Program("_ui", qt_src + [asset_obj], LIBS=qt_libs)
 # build translation files
 translation_sources = Glob("#selfdrive/ui/translations/*.ts", strings=True)
 translation_targets = [src.replace(".ts", ".qm") for src in translation_sources]
-lrelease = 'third_party/qt5/larch64/bin/lrelease' if arch == 'larch64' else 'lrelease'
-qt_env.Command(translation_targets, translation_sources, f"{lrelease} $SOURCES")
+qt_env.Command(translation_targets, translation_sources, f"#third_party/qt5/aarch64/bin/lrelease $SOURCES")
 
 
 
