--- a/selfdrive/ui/SConscript
+++ b/selfdrive/ui/SConscript
@@ -65,10 +65,10 @@ qt_src = ["main.cc", "ui.cc", "paint.cc", "qt/sidebar.cc", "qt/onroad.cc",
 qt_env.Program("_ui", qt_src + [asset_obj], LIBS=qt_libs)
 
 # build translation files
-translation_sources = Glob("#selfdrive/ui/translations/*.ts", strings=True)
-translation_targets = [src.replace(".ts", ".qm") for src in translation_sources]
-lrelease = 'third_party/qt5/larch64/bin/lrelease' if arch == 'larch64' else '/data/openpilot/third_party/qt5/aarch64/bin/lrelease'
-qt_env.Command(translation_targets, translation_sources, f"{lrelease} $SOURCES")
+# translation_sources = Glob("#selfdrive/ui/translations/*.ts", strings=True)
+# translation_targets = [src.replace(".ts", ".qm") for src in translation_sources]
+# lrelease = 'third_party/qt5/larch64/bin/lrelease' if arch == 'larch64' else '/data/openpilot/third_party/qt5/aarch64/bin/lrelease'
+# qt_env.Command(translation_targets, translation_sources, f"{lrelease} $SOURCES")
 
 
 
